# remote-compiler

./: .dockerignore  .gitignore  Dockerfile.client  Dockerfile.server  Makefile  README.md  cliff.toml  lint.ps1  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml
.rgcc/: server.config.yaml.example
client/: cli.py  collect.py  manifest.py
client/transport/: api.py
config/: client.config.yaml.example
rgcc/: __init__.py  __main__.py
rgcc/client/: __init__.py  __main__.py  cli.py  collect.py  manifest.py
rgcc/client/transport/: api.py
rgcc/core/: checksum.py  config.py  crypto.py  manifest.py  platforms.py  security.py
rgcc/server/: __init__.py  __main__.py  buildinfo.py
rgcc/server/api/: app.py
rgcc/server/compiler/: __init__.py  fallback.py  runner.py
rgcc/server/jobs/: __init__.py  store.py
rgcc/shared/: checksum.py  config.py  crypto.py  manifest.py  platforms.py
sample/: main.cpp  utils.h
server/: __main__.py
server/api/: __init__.py  app.py
server/compiler/: runner.py
server/jobs/: store.py
shared/: __init__.py  config.py  manifest.py  platforms.py
tests/: __init__.py  test_fixes.py  test_import.py  test_placeholder.py
