[project]
name = "remote-compiler"
version = "2.0.0"
description = "Remote GCC Compiler System"
authors = [{name = "whaiman"}]
dependencies = [
    "cryptography>=44.0.0",
    "PyYAML>=6.0",
]
readme = "README.md"
license = {text = "AGPL-3.0"}

[project.optional-dependencies]
client = [
    "httpx",
    "typer[all]",
    "rich"
]
server = [
    "starlette",
    "uvicorn",
    "python-multipart"
]
dev = [
    "remote-compiler[client,server]",
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "mypy",
    "bandit",
    "safety",
]

[project.scripts]
rgcc = "rgcc:client_main"
rgccd = "rgcc:server_main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rgcc", "rgcc.*"]
