[project]
name = "remote-compiler"
version = "2.0.0"
description = "Remote GCC Compiler System"
authors = [{name = "whaiman"}]
dependencies = [
    "cryptography>=44.0.0",
    "PyYAML>=6.0",
]
readme = "README.md"
license = {text = "AGPL-3.0"}


[project.optional-dependencies]
client = ["httpx", "typer[all]", "rich"]
server = ["starlette", "uvicorn", "python-multipart"]
dev    = [
    "httpx", "typer[all]", "rich",
    "starlette", "uvicorn", "python-multipart",
    "pytest", "ruff", "black",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where   = ["."]
include = ["rgcc", "rgcc.*"]

[tool.mypy]
ignore_missing_imports = true
strict = true
explicit_package_bases = true